--- a/src/app/pages/message-board/message-board.page.scss
+++ b/src/app/pages/message-board/message-board.page.scss
@@ -35,14 +35,31 @@ ion-header {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    border-bottom: 1px solid var(--ion-color-light);
 
     ion-chip {
         font-weight: 600;
     }
 
     .versus {
-        font-size: 0.85rem;
         padding: 0 1em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    ion-avatar {
+        margin: 0em 0em -1.5em 0em;
+    }
+
+    ion-note {
+        font-weight: 600;
+        margin-bottom: 0.25em;
+    }
+
+    .current-count {
+        margin: 0.5em 0em -1.25em 0em;
     }
 }
 
@@ -50,6 +67,8 @@ ion-header {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    min-width: 90%;
+    margin-bottom: 1em;
 
     ion-card-content {
         padding: 0 !important;
@@ -63,16 +82,16 @@ ion-header {
 
 .team-wrapper-away, .team-wrapper-home {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     font-size: 1rem;
     font-weight: 600;
 
     ion-avatar {
-        margin: 0 0.5em;
-        max-width: 24px;
-        max-height: 24px;
+        margin: 1em 0.5em;
+        max-width: 34px;
+        max-height: 34px;
     }
 
     .team-info-home, .team-info-away {
@@ -134,4 +153,16 @@ ion-title {
 .live-game-banner {
     display: flex;
     flex-direction: row;
+}
+
+.score {
+    font-size: 2em;
+}
+
+.pitcher-duel {
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 1em;
+    margin: 0em 0em 1em 0em;
+    border-bottom: 1px solid var(--ion-color-light);
 }
