--- a/src/app/pages/message-board/message-board.page.html
+++ b/src/app/pages/message-board/message-board.page.html
@@ -80,7 +80,11 @@
     </div>
     <div *ngIf="game.gameStatus === 'In Progress'" class="game-status">
       <ion-card-subtitle>Latest:</ion-card-subtitle>
-      <ion-note class="last-event">{{game.lastEvent}}</ion-note>
+      <ion-note *ngIf="lastEvent" class="last-event">{{game.lastEvent}}</ion-note>
+      <ion-card-subtitle>Latest Plays:</ion-card-subtitle>
+      <div class="latest-plays" *ngFor="let play of game.initialGameInfo[0].latestPlays">
+        <ion-note *ngIf="play.result.description"><ion-icon name="chevron-forward-outline"></ion-icon>{{play.result.description}}</ion-note>
+      </div>
     </div>
     <div class="join-conversation" *ngIf="game.gameStarted === 'true'">
       <ion-note color="dark">Join the conversation <ion-icon name="chevron-forward-outline"></ion-icon></ion-note>
