--- a/src/app/pages/message-board/message-board.page.scss
+++ b/src/app/pages/message-board/message-board.page.scss
@@ -156,6 +156,11 @@ ion-title {
     flex-direction: column;
     margin: 0 1em 1em 1em;
     max-width: 450px;
+
+    ion-note {
+        display: flex;
+        justify-content: flex-start;
+    }
 }
 
 .live-description {
